@@ -17571,7 +17571,7 @@ use feature 'say';
             "PerlOp.rand(" . ($self->{"arguments"}->[0] ? $self->{"arguments"}->[0]->emit_java($level, "scalar") . ".to_double()" : "1.0") . ")"
         }, "srand", sub {
             (my($self), my($level), my($wantarray)) = @_;
-            "PerlOp.srand(" . ($self->{"arguments"}->[0] ? $self->{"arguments"}->[0]->emit_java($level, "scalar") . ".to_long()" : '') . ")"
+            "PerlOp.srand(" . ($self->{"arguments"}->[0] ? $self->{"arguments"}->[0]->emit_java($level, "scalar") : '') . ")"
         }, (map {
             my $op = $_;
             ($op, sub {
@@ -23530,8 +23530,15 @@ class PerlOp {
         random = new Random();
         return PlCx.UNDEF;
     }
-    public static final PlObject srand(long s) {
+    public static final PlObject srand(PlObject o) {
+        if (!o.is_integer_range()) {
+            PlCORE.warn(PlCx.VOID, new PlArray(new PlString(\"Integer overflow in srand\")));
+        }
+        long s = o.to_long();
         random = new Random(s);
+        if (s == 0) {
+            return new PlString(\"0E0\");
+        }
         return new PlInt(s);
     }
 
